2015-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (help): Add STM32_PRIMER2.

	* src/sys.c: Update from chopstx/example-cdc/sys.c.

2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1c.

2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1b.

	* src/configure: Call configure of Fraucheky with REVISION,
	REVISION_CHOPSTX, REVISION_FRAUCHEKY.

2015-03-12  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1a.

	* src/main.c (fill_serial_no_by_unique_id): Use bits in higher
	address.

2015-01-29  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1.

2015-01-28  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE, board/STBEE_MINI: Remove.

2015-01-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (build/neug.o, build/sha256.o): Use -O3.

2015-01-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (.text): Add ALIGN(8) at the end.

	* fraucheky: Update to 0.1.

2014-12-10  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.04.

	* src/sys.c: Update from chopstx.

2014-05-22  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* fraucheky: Update.

2013-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (usb_handle_transfer): Incorporate changes
	from Gnuk.

2013-11-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (usb_interrupt_handler): Change the order of
	calling handler.

2013-11-11  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.

2013-11-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c (adc_wait_completion): Remove comment about
	spurious interrupt, as we knew that it's because of the bug of
	Chopstx 0.00.

2013-11-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.03.

	* src/usb_stm32f103.c (ISTR_OVR): Rename.
	(usb_handle_transfer): Rewrite control transfer handling, so that
	the case where both of CTR_TX, CTR_RX are 1 is handled correctly.

	* src/main.c (neug_setup_endpoints_for_interface): Fix for ENDP2.

2013-11-06  Niibe Yutaka  <gniibe@fsij.org>
