@@ -1,3 +1,7 @@
+2015-06-30  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/configure (help): Add CQ_STARM.
+
 2015-06-22  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/configure (help): Add STM32_PRIMER2.
